# hospital_robot

./: CMakeLists.txt  README.md  package.xml
config/: config.rviz
launch/: display.launch  gazebo.launch  gmapping.launch  main.launch  navigation.launch
maps/: hospital_map.pgm  hospital_map.yaml
param/: base_local_planner_params.yaml  costmap_common_params.yaml
scripts/: voice_robot.py
urdf/: config.rviz  robot.urdf
worlds/: hospital.world
